--- a/views/manager/account/index.hbs
+++ b/views/manager/account/index.hbs
@@ -6,15 +6,6 @@
 {{/section}}
 {{#section 'js'}}
     <script type="text/javascript">
-    $(document).ready(function(e) {
-        $('.search-panel .dropdown-menu').find('a').click(function(e) {
-            e.preventDefault();
-            var param = $(this).attr("href").replace("#", "");
-            var concept = $(this).text();
-            $('.search-panel span#search-concept').text(concept);
-            $('.input-group #search-param').val(param);
-        });
-    });
 
     $('.resetAcc').on('click', function() {
         var id = $(this).data('id');
@@ -29,6 +20,16 @@
     });
     </script>
 {{/section}}
+{{#section 'breadcrumbs'}}
+    <div class="row container-fluid">
+        <ol class="breadcrumb breadcrumb-arrow">
+            <li><a href="/home">Trang chủ</a></li>
+            <li class="active"><span>Quản trị tài khoản</span></li>
+        </ol>
+        <!-- /Đường dẫn -->
+    </div>
+{{/section}}
+{{> managerPanel this}}
 <div class="col-md-9">
     {{#if showError }}
         <div class="alert alert-warning alert-dismissible" role="alert">
