--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -6,18 +6,18 @@
     <link href="/assets/css/docs.css" rel="stylesheet">
 {{/section}}
 {{#section 'js'}}
-    <script type="text/javascript">
-    $(document).ready(function(e) {
-        $('.search-panel .dropdown-menu').find('a').click(function(e) {
-            e.preventDefault();
-            var param = $(this).attr("href").replace("#", "");
-            var concept = $(this).text();
-            $('.search-panel span#search-concept').text(concept);
-            $('.input-group #search-param').val(param);
-        });
-    });
-    </script>
+
 {{/section}}
+{{#section 'breadcrumbs'}}
+    <div class="row container-fluid">
+        <ol class="breadcrumb breadcrumb-arrow">
+            <li><a href="/home">Trang chủ</a></li>
+        </ol>
+        <!-- /Đường dẫn -->
+    </div>
+{{/section}}
+
+{{> categoriesPanel this}}
 <!-- Slider -->
 <div class="col-md-9">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
