--- a/views/account/login.hbs
+++ b/views/account/login.hbs
@@ -12,6 +12,8 @@
     }
     </style>
 {{/section}}
+
+{{> categoriesPanel this}}
 <div class="col-md-9">
     {{#if showError }}
         <div class="alert alert-warning alert-dismissible" role="alert">
