--- a/views/account/register.hbs
+++ b/views/account/register.hbs
@@ -25,15 +25,6 @@ label {
         minView: 2,
         forceParse: 0
     });
-    $(document).ready(function(e) {
-        $('.search-panel .dropdown-menu').find('a').click(function(e) {
-            e.preventDefault();
-            var param = $(this).attr("href").replace("#", "");
-            var concept = $(this).text();
-            $('.search-panel span#search-concept').text(concept);
-            $('.input-group #search-param').val(param);
-        });
-    });
 
     function recaptchaCallback() {
         $('#hiddenRecaptcha').valid();
@@ -136,7 +127,17 @@ $('#frmRegister').validate({
 });
 </script>
 {{/section}} 
+{{#section 'breadcrumbs'}}
+    <div class="row container-fluid">
+        <ol class="breadcrumb breadcrumb-arrow">
+            <li><a href="/home">Trang chủ</a></li>
+            <li class="active"><span>Đăng ký</span></li>
+        </ol>
+        <!-- /Đường dẫn -->
+    </div>
+{{/section}}
 
+{{> categoriesPanel this}}
 <div class="col-md-9">
     {{#if showError }}
     <div class="alert alert-warning alert-dismissible" role="alert">
