--- a/views/product/byCat.hbs
+++ b/views/product/byCat.hbs
@@ -1,77 +1,97 @@
 {{#section 'title'}}
     Danh sách sản phẩm
 {{/section}}
-
+{{#section 'css'}}
+    <link href="/assets/css/bootstrap-datetimepicker.min.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="/assets/css/bootstrap-social.css" rel="stylesheet" type="text/css" media="all" />
+    <link rel="stylesheet" type="text/css" href="/assets/css/breadcrumbs.css">
+    <link href="/assets/css/docs.css" rel="stylesheet">
+    <style type="text/css">
+    label {
+        font-weight: normal !important;
+    }
+    </style>
+{{/section}}
 {{#section 'js'}}
     <script type="text/javascript">
-        $('.addItem').on('click', function () {
-            var proId = $(this).data('id');
-            $('#txtP').val(proId);
-            $('#frmAddToCart').submit();
-        });
+    $('.addItem').on('click', function() {
+        var proId = $(this).data('id');
+        $('#txtP').val(proId);
+        $('#frmAddToCart').submit();
+    });
     </script>
 {{/section}}
-
-{{#if isEmpty }}
-    Không có sản phẩm!
-{{else}}
-    <form id="frmAddToCart" method="post" action="/cart/add1">
-        <input type="hidden" id="txtP" name="proId" />
-        <input type="hidden" id="txtC" name="catId" value="{{catId}}" />
-    </form>
-    <div class="row">
-        {{#each products }}
-        <div class="col-md-6">
-            <div class="thumbnail">
-                <img src="/Imgs/sp/{{ProID}}/main_thumbs.jpg" title="{{ProName}}" />
-                <div class="caption">
-                    <h4>{{ProName}}</h4>
-                    <h4>Giá: {{formatNumber Price}}</h4>
-                    <h4>Tồn: {{Quantity}}</h4>
-                    <p>{{TinyDes}}</p>
-                    <p>
-                        <a href="/product/detail/{{ProID}}" class="btn btn-default" role="button">
-                            Chi tiết
-                        </a>
-                        {{#if ../layoutModels.isLogged }}
-                            <a href="javascript:;" class="btn btn-success addItem" role="button" data-id="{{ProID}}">
-                                <i class="fa fa-cart-plus"></i>
-                                Đặt mua
-                            </a>
-                        {{/if}}
-                    </p>
-                </div>
-            </div>
-        </div>
-        {{/each}}
+{{#section 'breadcrumbs'}}
+    <div class="row container-fluid">
+        <ol class="breadcrumb breadcrumb-arrow">
+            <li><a href="/home">Trang chủ</a></li>
+        </ol>
+        <!-- /Đường dẫn -->
     </div>
-    <nav aria-label="Page navigation">
-        <ul class="pagination">
-            {{#if showPrevPage}}
-                <li>
-                    <a href="?page={{prevPage}}" aria-label="Previous">
-                        <span aria-hidden="true">&laquo;</span>
-                    </a>
-                </li>
+{{/section}}
+{{> categoriesPanel this}}
+<div class="col-md-9">
+    <div class="panel panel-default" style="border-color: #189eff;">
+        <div class="panel-heading" style="background-color: #189eff;">
+            <span class="panel-title">Danh sách sản phẩm</span>
+        </div>
+        <div class="panel-body">
+            {{#if isEmpty }}
+                <div class="alert alert-warning alert-dismissible" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <strong>Warning!</strong> Không có sản phẩm!
+                </div>
+            {{else}}
+                <div class="row">
+                    {{#each products }}
+                        <div class="col-md-6">
+                            <div class="thumbnail">
+                                <img src="/Imgs/sp/{{madaugia}}/main_thumbs.jpg" title="{{tensp}}" />
+                                <div class="caption">
+                                    <h4>{{tensp}}</h4>
+                                    <h4>Giá: {{formatNumber giahientai}}</h4>
+                                    <h4>Tồn: {{Quantity}}</h4>
+                                    <p>{{mota}}</p>
+                                    <p style="text-align: right;">
+                                        <a href="/product/detail/{{madaugia}}" class="btn btn-success " role="button">
+                                    Chi tiết
+                                </a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    {{/each}}
+                </div>
+                <nav aria-label="Page navigation">
+                    <ul class="pagination">
+                        {{#if showPrevPage}}
+                            <li>
+                                <a href="?page={{prevPage}}" aria-label="Previous">
+                                    <span aria-hidden="true">&laquo;</span>
+                                </a>
+                            </li>
+                        {{/if}}
+                        {{#each pages }}
+                            {{#if isActive }}
+                                <li class="active">
+                                    <a href="?page={{pageValue}}">{{pageValue}}</a>
+                                </li>
+                            {{else}}
+                                <li>
+                                    <a href="?page={{pageValue}}">{{pageValue}}</a>
+                                </li>
+                            {{/if}}
+                        {{/each}}
+                        {{#if showNextPage }}
+                            <li>
+                                <a href="?page={{nextPage}}" aria-label="Next">
+                                    <span aria-hidden="true">&raquo;</span>
+                                </a>
+                            </li>
+                        {{/if}}
+                    </ul>
+                </nav>
             {{/if}}
-            {{#each pages }}
-                {{#if isActive }}
-                    <li class="active">
-                        <a href="?page={{pageValue}}">{{pageValue}}</a>
-                    </li>
-                {{else}}
-                    <li>
-                        <a href="?page={{pageValue}}">{{pageValue}}</a>
-                    </li>
-                {{/if}}
-            {{/each}}
-            {{#if showNextPage }}
-                <li>
-                    <a href="?page={{nextPage}}" aria-label="Next">
-                        <span aria-hidden="true">&raquo;</span>
-                    </a>
-                </li>
-            {{/if}}
-        </ul>
-    </nav>
-{{/if}}
+        </div>
+    </div>
+</div>
