--- a/views/_partials/accountPanel.hbs
+++ b/views/_partials/accountPanel.hbs
@@ -8,17 +8,17 @@
         <div class="panel-heading" style="background-color: #189eff; color:#fff">Quản lý đấu giá sản phẩm </div>
         <div class="list-group">
             <a href="/account/watching" class="list-group-item">Đang theo dõi</a>
-            <a href="#" class="list-group-item">Đang đấu giá</a>
-            <a href="#" class="list-group-item">Đấu giá thành công</a>
-            <a href="#" class="list-group-item">Đấu giá đã kết thúc</a>
+            <a href="/account/bidingList" class="list-group-item">Đang đấu giá</a>
+            <a href="/account/wonList" class="list-group-item">Đấu giá thành công</a>
         </div>
     </div>
     <div class="panel panel-default" style="border-color: #189eff;">
         <div class="panel-heading" style="background-color: #189eff; color:#fff">Quản lý bán hàng</div>
         <div class="list-group">
             <a href="/account/NewAuction" class="list-group-item">Đăng bán mới</a>
-            <a href="#" class="list-group-item">Sản phẩm đang bán</a>
-            <a href="#" class="list-group-item">Sản phẩm đã bán thành công</a>
+            <a href="/account/newPermit" class="list-group-item">Xin được bán</a>
+            <a href="/account/sellingList" class="list-group-item">Sản phẩm đang bán</a>
+            <a href="/account/soldList" class="list-group-item">Sản phẩm đã bán thành công</a>
         </div>
     </div>
 </div>
