Sửa link xin được bán

--- a/views/account/newAuction.hbs
+++ b/views/account/newAuction.hbs
@@ -330,7 +330,7 @@
                     <!-- panel body -->
                     <div class="col-sm-12">
                         <h3>Tài khoản này chưa được cấp hoặc đã hết hạn quyền được bán.</span></h3>
-                        <h3><a href="account/newPermit">Xin phép được bán tại đây.</a></h3>
+                        <h3><a href="/account/newPermit">Xin phép được bán tại đây.</a></h3>
                     </div>
                 </div>
             {{/if}}
