Bỏ thuộc tính "Tồn"

--- a/views/product/byCat.hbs
+++ b/views/product/byCat.hbs
@@ -50,7 +50,7 @@
                                 <div class="caption">
                                     <h4>{{tensp}}</h4>
                                     <h4>Giá: {{formatNumber giahientai}}</h4>
-                                    <h4>Tồn: {{Quantity}}</h4>
+                                    {{!-- <h4>Tồn: {{Quantity}}</h4> --}}
                                     <p>{{mota}}</p>
                                     <p style="text-align: right;">
                                         <a href="/product/detail/{{madaugia}}" class="btn btn-success " role="button">
