--- a/views/_partials/header.hbs
+++ b/views/_partials/header.hbs
@@ -60,8 +60,8 @@
                     </button>
                     <div class="dropdown-content">
                         <a href="/account/profile">Thông tin cá nhân</a>
-                        <a id="logoutLink" href="javascript:;">Thoát</a>
-                        <a href="#">Link 3</a>
+                        <a href="/account/ratedetail">Chi tiết đánh giá</a>
+                        <a id="logoutLink" href="javascript:;">Thoát</a>                      
                     </div>
                 </div>
             {{else}}
@@ -144,6 +144,7 @@
             <li style="width:10%;"><a>Hot deal</a></li>
             <li style="width:20%;"><a>Sản phẩm đang theo dõi</a></li>
             <li style="width:10%;"><a>Đăng bán</a></li>
+            <li style="width:10%;"><a href="/account/register">Đăng ký</a></li>
         </ul>
     </div>
     <!-- /Navigation bar -->
