Cập nhật màu nền cho trang

--- a/views/_layouts/main.hbs
+++ b/views/_layouts/main.hbs
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/breadcrumbs.css"> {{{_sections.css}}}
 </head>
 
-<body>
+<body style="background: #EBECED">
     {{> header this }}
     <form id="frmLogout" method="post" action="/account/logout"></form>
     <div class="container-fluid" style="width: 85%; max-width: none!important; margin-right: auto; margin-left: auto;">
