Cập nhật giao diện các trang
+ Chỉnh link đánh giá ở soldList và wonList
+ Cài đặt giao diện cho rateBuyer và rateSeller

--- a/views/account/soldList.hbs
+++ b/views/account/soldList.hbs
@@ -73,7 +73,7 @@
                                     <td>{{formatNumber giakhoidiem}}</td>
                                     <td>{{formatNumber giahientai}}</td>
                                     <td>
-                                        <a href="/account/rate?{{id}}" class="btn btn-xs btn-primary" title="rate">
+                                        <a href="/account/rateBuyer?idAcc={{id}}&idPro={{madaugia}}" class="btn btn-xs btn-primary" title="rate">
                                             Đánh giá
                                         </a>
                                     </td>
