Cập nhật link hình trên trang chủ

--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -30,13 +30,13 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item active">
-                <img src="/images/c1.png" alt="c1">
+                <img src="/Imgs/adver/c1.png" alt="c1">
             </div>
             <div class="item">
-                <img src="/images/c2.png" alt="c2">
+                <img src="/Imgs/adver/c2.png" alt="c2">
             </div>
             <div class="item">
-                <img src="/images/c3.png" alt="c3">
+                <img src="/Imgs/adver/c3.png" alt="c3">
             </div>
         </div>
         <!-- Left and right controls -->
